Edited setup instructions and evaluation

--- a/CS6301.005_ArmchairCoders_Report.tex
+++ b/CS6301.005_ArmchairCoders_Report.tex
@@ -178,9 +178,9 @@ Figure 6. Lifting decoded instructions to the intermediate language.
 
 \section*{\centering Evaluation}
 \vspace{0.3cm}
-When we set out to complete this project, our goal was to build an ARMv7 instruction decoder/lifter framework that could successfully lift a stringlen binary. Based on this initial goal, it can be said that we were about 90\text{\%} successful with this project. We were able to fully decode instructions from the binary we picked out and lift all of the instruction except for a few, where their side effects were not lifted fully, namely the ADD\_imm and CMP\_imm instructions which are present in our target binary. This is because they contain severe side effects such as updating the 4 flags that ARMv7 has. We were not sure how to utilize the Picaane IL system to lift those side effects properly. \\
+When we set out to complete this project, our goal was to build an ARMv7 instruction decoder/lifter framework that could successfully lift a stringlen binary. Based on this initial goal, it can be said that we were about 90\text{\%} successful with this project. We were able to fully decode instructions from the binary we picked out and lift all of the instruction except for a few where their side effects were not lifted fully - namely, the ADD\_imm and CMP\_imm instructions, which are present in our target binary. This is because they contain severe side effects such as updating the 4 flags that ARMv7 has. We were not sure how to utilize the Picaane IL system to lift those side effects properly. \\
 
-To elaborate on the CMP\_imm instruction, which is central to branching in ARMv7, it needed to update all 4 flags based on the subtraction of a register value and an immediate value. If it was equal, set the Z flag to 1, otherwise 0. If the operation carried, then set the C flag to 1, otherwise 0. The problem we had was checking for this carry using the Picanae IL expressions as we couldn't use the COQ standard library or write our own because we had to operate on the Var ASPR that the Picanae system alone could only access.\\
+To elaborate on the CMP\_imm instruction, which is central to branching in ARMv7, it needed to update all 4 flags based on the subtraction of a register value and an immediate value. If it was equal, set the Z flag to 1, otherwise set the Z flag to 0. If the operation carried, then set the C flag to 1, otherwise set the C flag to 0. The problem we had was checking for this carry using the Picanae IL expressions as we couldn't use the COQ standard library or write our own because we had to operate on the Var ASPR that the Picanae system alone could only access.\\
 
 To compensate for the lack of side effects, we extended the framework to include more instructions that could be decoded and lifted into Picanae, rounding the amount of ARMv7 instructions supported by our decoder to roughly 30 instructions. In addition, a few instructions were added that could be decoded, but not lifted successfully by us due to their similarity to the mentioned CMP\_imm instruction and its side effects.
 
@@ -216,15 +216,14 @@ We also very heavily relied on a previous implementation of a decoder and lifter
 \section*{\centering Setup Instructions}
 \vspace{0.3cm}
 
-The framework for both the ARMv7 deocder and the subsequent lifter to the Picanae IL are compiled using Coq, namely (insert Coq version here), and is currently located within a single (insert file name).v file. Given the IL base, it is recommended to run the Coq file from within the Picanae system folder, provided that the project has been compiled and built into a library for the .v file to be utilized. The file includes the selected stringlen binary ARMv7 instruction code, alongside the corresponding decimal values that the decoder reads in order to successfully decode the instruction. In addition to the values from the test binary, the file also contains several computed statements that use decimal values corresponding to all of the instructions supported by our framework, but not present within the selected test binary. Running the file through each instruction should yield a successful run as one steps through the instruction set.\\
+The framework for both the ARMv7 deocder and the subsequent lifter to the Picanae IL are compiled using Coq 8.15 and is currently located within the armv7\_decode.v file. Given the IL base, it is recommended to run the Coq file from within the Picanae system folder, provided that the project has been compiled and built into a library for the .v file to be utilized. The file includes the selected stringlen binary ARMv7 instruction code, alongside the corresponding decimal values that the decoder reads in order to successfully decode the instruction. In addition to the values from the test binary, the file also contains several computed statements that use decimal values corresponding to all of the instructions supported by our framework, but not present within the selected test binary. Running the file through each instruction should yield a successful run as one steps through the instruction set.\\
 
-We have also included a Python3 script that is capable of parsing an ARMv7 binary and dumping the decimal representation of each instruction into a Coq .v file. Currently, due to the nature of how the script is meant to interact with binaries, the script currently only works on Linux environments. Our own environment was Ubuntu (insert version here). In order to parse custom binaries, the following steps must be taken.
+We have also included a Python3 script that is capable of parsing an ARMv7 binary and dumping the decimal representation of each instruction into a Coq .v file. Currently, due to the nature of how the script is meant to interact with binaries, the script currently only works on Linux environments. Our own environment was Ubuntu 22.04. In order to parse custom binaries, the following steps must be taken.
 
 \begin{enumerate}
 	\item Ensure that the Linux distribution being utilized has the standard Python library installed
 	\item In terminal, run "apt-get install binutils-arm-linux-gnueabi" to install the library used to parse ARMv7 binaries
-	\item With both the python script and the binary in the same location, execute "python Picinae\_ARM\_to\_Function.py (name of ARMv7 binary file) in order to generate a Coq .v file to transfer the decimal representations to our (insert coq file name).v file for decoding and lifting.
-\\
+	\item With both the python script and the binary in the same location, execute "python Picinae\_ARM\_to\_Function.py [name of ARMv7 binary file] in order to generate a Coq .v file. The program will output the name of the .v file generated, which can then be used by armv7\_decode.v for decoding and lifting.
 \end{enumerate}
 
 
